Revise README for improved clarity and structure
Updated project overview, installation instructions, and setup details in README.md to enhance clarity and usability.